--- a/index.html
+++ b/index.html
@@ -97,14 +97,16 @@
         <h1 class="display-4">Top kaniar !</h1>
 
         <div class="row justify-content-center">
+          
           <div class="m-1">
-            <img src="img/fashion1.jpg">
+            <img class="zoom" src="img/fashion1.jpg">
           </div>
           <div class="m-5">
-            <img src="img/fashion2.jpg">
+            <img class="zoom" src="img/fashion2.jpg">
           </div>
           <div class="m-1">
-            <img src="img/fashion3.jpg">
+            <img class="zoom" src="img/fashion3.jpg">
+          </div>
           </div>
 
 
